# parse-cxx

./: .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  README.md  conanfile.py
include/: ParseCloud.h  ParseConstants.h
include/ACL/: ParseACL.h  ParseRole.h
include/File/: ParseFile.h  UploaderManager.h
include/Geo/: ParseGeoPoint.h
include/Object/: ParseObject.h  ParseRelation.h
include/Query/: ParseQuery.h
include/Request/: ParsePaasClient.h
include/User/: ParseUser.h
include/Utils/: ParseErrorUtils.h  ParsePlatformMacros.h  ParseStringUtils.h
src/: CMakeLists.txt  ParseCloud.cpp
src/ACL/: CMakeLists.txt  ParseACL.cpp  ParseRole.cpp
src/File/: CMakeLists.txt  ParseFile.cpp  UploaderManager.cpp
src/Geo/: CMakeLists.txt  ParseGeoPoint.cpp
src/Object/: CMakeLists.txt  ParseObject.cpp  ParseRelation.cpp
src/Query/: CMakeLists.txt  ParseQuery.cpp
src/Request/: CMakeLists.txt  ParsePaasClient.cpp
src/User/: CMakeLists.txt  ParseUser.cpp
src/Utils/: CMakeLists.txt  ParseErrorUtils.cpp
tests/: ACLTest.cpp  CMakeLists.txt  FileTest.cpp  GeoPointTest.cpp  ObjectTest.cpp  PaasClientTest.cpp  QueryTest.cpp  UserTest.cpp
